test/compile_errors/binary_schema_invalid_tdisp_syntax.zig
const fits = @import("zigfitsio");

comptime {
    _ = fits.BinarySchema(&.{
        .{ .name = "LABEL", .tform = "8A", .tdisp = "A8.2" },
    });
}
